# bjtuCarteen

./: .gitignore  API.md  API_HANDOFF.md  ARCHITECTURE.md  FRONTEND_REFACTOR_REPORT.md  IMPLEMENTATION_SPLIT.md  INTEGRATION.md  METRICS.md  README.md  USER_GUIDE.md  pom.xml  start.ps1  源代码说明文档.md
Project3/: DiningSimulation.h  Project3.vcxproj  Project3.vcxproj.filters  源.cpp
dataAnalyze/: AnalysisCore.cpp  AnalysisCore.h  CMakeLists.txt  DiningSimulation.cpp  JsonUtil.h  Project3.sln  README.md  simulation_report_19d8aef7e50.json  simulation_result_report_1776151219366.json  源.cpp
dataAnalyze/Project3/x64/Debug/: Project3.ilk
dataAnalyze/Project3/x64/Debug/Project3.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Project3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog
reports/: simulation-history-0a7eaa42-2372-4b4b-bbd6-b89cdd0b9129.json  simulation-history-1cd76fd0-6728-437d-8082-3de13b2c5807.json  simulation-history-265938f6-1877-427f-a7c1-42bd5d115ccb.json  simulation-history-28a74f38-6a9e-4b25-b9d8-44cb2851dd68.json  simulation-history-2af76925-af47-4343-ac4b-5a6064b03bc7.json  simulation-history-2f13e13b-ffb7-4c8b-981c-76bade61239c.json  simulation-history-30baa2b6-2b50-421d-9658-9b112f6aff99.json  simulation-history-39ee456f-02b8-495a-bcd4-a54b2f5d43ca.json  simulation-history-4070e7bf-045d-4339-9c4b-a85059ee8b17.json  simulation-history-4086e4d9-6ab9-43cf-b3a1-c14c553b0f16.json  simulation-history-4d624459-edb9-4ab9-8d98-c20647a42141.json  simulation-history-5f70bc53-9cab-4c6f-b9b1-fb778699714a.json  (+374 more)
sun/: index.html  (+5 more)
(+155 files in other folders)
